# cc-viewer

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.js
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs
src/components/: CodeBlock.tsx  FileList.tsx  ProjectGroup.tsx  SearchBar.tsx  SidebarSearch.tsx  StatsPanel.tsx
src/components/cards/: AssistantCard.tsx  CollapseToggle.tsx  EditDiffViewer.tsx  MessageCard.tsx  SystemCard.tsx  ThinkingCard.tsx  ToolCallCard.tsx  ToolCallContent.tsx  UnifiedCard.tsx  UserCard.tsx
src/components/layout/: MainLayout.tsx  MessagePanel.tsx  Sidebar.tsx
src/components/ui/: button.tsx  card.tsx  dialog.tsx  empty-state.tsx  error.tsx  input.tsx  loading.tsx
src/hooks/: useKeyboard.ts
src/lib/: markdown.ts  parser.ts  stats.ts  utils.ts
src/stores/: fileStore.ts  uiStore.ts
src/styles/: brutalism.css  globals.css
src/theme/: css-variable-map.json  index.ts  palette.json
src/types/: app.ts  jsonl.ts  ui.ts
