[package]
name = "cc-viewer"
version = "1.0.0"
description = "Claude Code History Viewer"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.14"

[features]
custom-protocol = ["tauri/custom-protocol"]
